--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -430,7 +430,7 @@
       </p>
     </section>
 
-    <!-- Related Merch Section (Updated with Store Section from Homepage) -->
+    <!-- Related Merch Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
@@ -443,30 +443,11 @@
           <h2 class="store-heading">RELATED</h2>
           <div class="store-grid">
 
-
-            <a href="../mcr-001/" class="merch-link">
-              <div class="merch-block">
-                <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
-                </div>
-                <div class="merch-block-details-container">
-                  <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
-                    <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
-                  </div>
-                  <div class="merch-block-price-container">
-                    <div class="merch-block-price">$10</div>
-                  </div>
-                </div>
-              </div>
-            </a>
-
             <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -480,11 +461,30 @@
               </div>
             </a>
 
+
+            <a href="../mcr-001/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../dev-resources/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">MYSTERY CLASS RECORDS</p>
+                    <p class="merch-block-product-name">SIDE QUESTS VOL. 1 - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
             <a href="../new-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -498,23 +498,23 @@
               </div>
             </a>
 
-            <!-- <a href="../mcr-002v/" class="merch-link">
+            <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
                   </div>
                 </div>
               </div>
-            </a> -->
+            </a>
 
           </div>
         </div>
