--- a/store/mcr-005/index.html
+++ b/store/mcr-005/index.html
@@ -433,7 +433,7 @@
       </p>
     </section>
 
-    <!-- Related Merch Section (Updated with Store Section from Homepage) -->
+    <!-- Related Merch Section -->
     <section class="related-merch-section">
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
@@ -450,8 +450,8 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="MYSTERY CLASS RECORDS - Side Quests Vol. 1 Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -465,16 +465,16 @@
               </div>
             </a>
 
-            <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../mcr-004/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Cryhard - Of Course I Will Cassette (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
+                    <p class="merch-block-artist-name">Toad Socks</p>
+                    <p class="merch-block-product-name">Pond - CASSETTE</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$10</div>
@@ -486,8 +486,8 @@
             <a href="../new-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Portable Cassette Player - Transparent" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Portable Cassette Player - Transparent(Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -501,23 +501,23 @@
               </div>
             </a>
 
-            <!-- <a href="../mcr-002v/" class="merch-link">
+            <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Cryhard - Of Course I Will Vinyl (Hover)" class="merch-block-product-image hover-image">
+                  <img src="../../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - VINYL</p>
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
                   </div>
                   <div class="merch-block-price-container">
                     <div class="merch-block-price">$30</div>
                   </div>
                 </div>
               </div>
-            </a> -->
+            </a>
 
           </div>
         </div>
