--- a/store/mcr-005/index.html
+++ b/store/mcr-005/index.html
@@ -409,7 +409,7 @@
               <div class="whitespace"></div>
               <li>Bridges</li>
               <li>Fumble</li>
-              <li>LCD-10</li>
+              <li>ICD-10</li>
             </ol>
           </div>
           <hr class="separator">
