--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -19,27 +19,29 @@
   </head>
   
   <body>
-    <!-- Header Section -->
-    <header class="header">
-      <div class="logo">
-        <a href="../../">
-          <img src="../../dev-resources/images/header/header-logo.svg" alt="Logo">
-        </a>
-      </div>
-      <nav class="nav">
-        <a href="../../store">STORE</a>
-        <a href="../../artists">ARTISTS</a>
-        <a href="../../about">ABOUT</a>
-        <a href="" class="cart">CART</a>
-      </nav>
-      <div class="rainbow-strip">
-        <img src="../../dev-resources/images/header/header-rainbow-strip.svg" alt="Rainbow Strip">
-      </div>
-      <div class="hamburger-icon">
+  <!-- Header Section -->
+  <header class="header" data-expanded="false">
+    <div class="logo">
+      <a href="../../">
+        <img src="../../dev-resources/images/header/header-logo.svg" alt="Logo">
+      </a>
+    </div>
+    <nav class="nav">
+      <a href="../../store">STORE</a>
+      <a href="../../roster">ROSTER</a>
+      <a href="../../about">ABOUT</a>
+      <!-- <div class="cart-container">
+        <div id="cart-button"></div>
+      </div> -->
+    </nav>
+    <div class="hamburger-icon">
+      <button aria-label="Toggle Menu">
         <img src="../../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
-      </div>
-    </header>
-    <div class="header-spacer"></div>
+      </button>
+    </div>
+  </header>
+  <div class="rainbow-strip"></div>
+  <div class="header-spacer"></div>
 
     <!-- Main Content -->
     <main class="artist-page">
@@ -83,90 +85,82 @@
           <img src="../../dev-resources/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
-        <!-- Merch Content -->
-        <div class="related-merch-box">
-          <h2 class="related-merch-heading">MERCHANDISE</h2>
-          <div class="merch-grid">
+        <!-- Store Section -->
+        <div class="store-section">
+          <h2 class="store-heading">RELATED</h2>
+          <div class="store-grid">
 
-            <!-- Merch Block 1 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
+            <a href="../mcr-002/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                </div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
                     <p class="merch-block-artist-name">CRYHARD</p>
                     <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
-                </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 2 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
+            <a href="../mcr-005/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../dev-resources/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Sweetest Pot</p>
+                    <p class="merch-block-product-name">Burner Tape, Vol. 2 - Cassette</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 3 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
+            <a href="../mcr-004/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../dev-resources/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Toad Socks</p>
+                    <p class="merch-block-product-name">Pond - CASSETTE</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$10</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
-            <!-- Merch Block 4 -->
-            <div class="merch-block">
-              <div class="merch-block-image-container">
-                <a href="../../store/mcr-002/" class="merch-link">
-                  <img src="../../dev-resources/images/products/mcr-002.png" alt="Cryhard - Of Course I Will Cassette" class="merch-block-product-image">
-                </a>
-              </div>
-              <div class="merch-block-details-container">
-                <div class="merch-block-names-container">
-                  <a href="../../store/mcr-002/" class="merch-link">
-                    <p class="merch-block-artist-name">CRYHARD</p>
-                    <p class="merch-block-product-name">OF COURSE I WILL - Cassette</p>
-                  </a>
+            <a href="../new-005/" class="merch-link">
+              <div class="merch-block">
+                <div class="merch-block-image-container">
+                  <img src="../../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
-                <div class="merch-block-price-container">
-                  <div class="merch-block-price">$10</div>
+                <div class="merch-block-details-container">
+                  <div class="merch-block-names-container">
+                    <p class="merch-block-artist-name">Hat</p>
+                    <p class="merch-block-product-name">Black Corduroy</p>
+                  </div>
+                  <div class="merch-block-price-container">
+                    <div class="merch-block-price">$30</div>
+                  </div>
                 </div>
               </div>
-            </div>
+            </a>
 
           </div>
         </div>
@@ -191,13 +185,11 @@
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <a href="../../artists">ARTISTS</a>
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
-
       <div class="footer-horizontal-separator"></div>
-
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
