--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -44,33 +44,31 @@
   <div class="header-spacer"></div>
 
     <!-- Main Content -->
-    <main class="artist-page">
-      <div class="artist-header">
+    <main class="artist-section">
+      <div class="artist-heading">
         <h1 class="artist-name">CRYHARD</h1>
         <p class="artist-location">OKLAHOMA CITY, OK</p>
       </div>
-      <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=0687f5/artwork=none/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
       <div class="artist-image-container">
-        <img src="../../dev-resources/images/cryhard-artist-pic.png" alt="Cryhard Band Photo" class="artist-image">
+        <img src="../../dev-resources/images/roster/cryhard/roster-pic.webp" alt="Band Photo" class="artist-image">
       </div>
-      <div class="artist-buttons">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/34rOpTVLQjki1QYVqDhcdx?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <div class="artist-interactables">
+        <div class="artist-player">
+          <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+        </div>
         <div class="artist-social-icons">
           <a href=""><img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube"></a>
           <a href=""><img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok"></a>
         </div>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/34rOpTVLQjki1QYVqDhcdx?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
-      <div class="artist-description">
+      <div class="description-section">
         <p>
           Cryhard is an indie/alternative band based out of Oklahoma City and consists of members 
-          Bailey Little, Patrick Hanscom, and Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. Cryhard 
-          is a project in which everyone fills different roles depending on the track. This project has 
-          been in the works since 2018 and has had assistance from several good friends along the way.
-        </p>
-        <p>
+          Bailey Little, Patrick Hanscom, and Zachary Kampf, Jenny Mayes, and Malcolm Bensinger. <br><br>
+          Cryhard is a project in which everyone fills different roles depending on the track.
+          This project has been in the works since 2018 and has had assistance from several good friends along the way. <br><br>
           Of Course I Will is the band’s first full-length LP that reflects on themes of growing up, anxiety, and love. 
           Recorded in Bailey’s spare bedroom, this album embraces its DIY roots with a warm lo-fi sound.
         </p>
