--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -53,8 +53,11 @@
         <img src="../../dev-resources/images/roster/cryhard/roster-pic.webp" alt="Band Photo" class="artist-image">
       </div>
       <div class="artist-interactables">
-        <div class="artist-player">
-          <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+        <div class="player-container">
+          <div class="bandcamp-player">
+            <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1387178041/size=small/bgcol=ffffff/linkcol=333333/transparent=true/" seamless><a href="https://cryhardtypebeat.bandcamp.com/album/of-course-i-will">Of Course I Will by Cryhard</a></iframe>
+          </div>
+          <div class="player-spacer"></div>
         </div>
         <div class="artist-social-icons">
           <a href=""><img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook"></a>
