added dfunk promo page

--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
     <div class="store-section">
       <div class="store-grid">
 
+        <a href="store/mcr-006/" class="merch-link">
+          <div class="merch-block">
+            <div class="merch-block-image-container">
+              <img src="dev-resources/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+              <img src="dev-resources/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+            </div>
+            <div class="merch-block-details-container">
+              <div class="merch-block-names-container">
+                <p class="merch-block-artist-name">Donovan Funk</p>
+                <p class="merch-block-product-name">Promo</p>
+              </div>
+              <div class="merch-block-price-container">
+                <div class="merch-block-price">$10</div>
+              </div>
+            </div>
+          </div>
+        </a>
+
         <a href="store/mcr-005/" class="merch-link">
           <div class="merch-block">
             <div class="merch-block-image-container">
