--- a/roster/index.html
+++ b/roster/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- Under Construction Redirect -->
+<script>
+    window.location.href = "/dev-resources/under-construction.html";
+</script>
+
 <html lang="en">
   <head>
     <!-- Metadata and Page Settings -->
@@ -28,7 +33,7 @@
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <a href="../roster">ROSTER</a>
+        <!-- <a href="../roster">ROSTER</a> -->
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -144,7 +149,7 @@
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <a href="../roster">ROSTER</a>
+          <!-- <a href="../roster">ROSTER</a> -->
           <a href="../about">ABOUT</a>
         </nav>
       </div>
