--- a/roster/cryhard/index.html
+++ b/roster/cryhard/index.html
@@ -2,7 +2,7 @@
 
 <!-- Under Construction Redirect -->
 <script>
-    window.location.href = "/dev-resources/under-construction.html";
+    window.location.href = "/dev-resources/scripts/under-construction.html";
 </script>
 
 <html lang="en">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
     <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
     <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
-    <link rel="stylesheet" href="cryhard.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/artist-page.css">
   </head>
   
   <body>
