--- a/epk/powdr/index.html
+++ b/epk/powdr/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
     <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
     <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
-    <link rel="stylesheet" href="epk.css">
+    <link rel="stylesheet" href="../../dev-resources/shared-styles/epk.css">
   </head>
   
   <body>
