renamed dev-resources to assets

--- a/about/index.html
+++ b/about/index.html
@@ -7,14 +7,14 @@
     <title>About - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
+    <link rel="stylesheet" href="../assets/shared-styles/global.css">
+    <link rel="stylesheet" href="../assets/shared-styles/header.css">
+    <link rel="stylesheet" href="../assets/shared-styles/footer.css">
     <link rel="stylesheet" href="about.css">
   </head>
 
@@ -23,7 +23,7 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../dev-resources/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -36,7 +36,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
         </button>
       </div>
     </header>
@@ -48,7 +48,7 @@
       <h1 class="about-heading">ABOUT</h1>
       <div class="about-content">
         <div class="about-image-container">
-          <img src="../dev-resources/images/about/mcr-about-photo.png" alt="Mystery Class Records Logo">
+          <img src="../assets/images/about/mcr-about-photo.png" alt="Mystery Class Records Logo">
         </div>
         <div class="about-text">
           <p>
@@ -72,7 +72,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -87,31 +87,31 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
     <!-- Scripts -->
-    <script src="../dev-resources/scripts/CartToggleSticky.js" async></script>
-    <script src="../dev-resources/scripts/MobileHeaderExpand.js"></script>
+    <script src="../assets/scripts/CartToggleSticky.js" async></script>
+    <script src="../assets/scripts/MobileHeaderExpand.js"></script>
     
   </body>
 </html>
