--- a/store/mcr-003/index.html
+++ b/store/mcr-003/index.html
@@ -7,15 +7,15 @@
     <title>Cassette - Stetch Us Outta Here - Cryhard</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/global.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/header.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/footer.css">
-    <link rel="stylesheet" href="../../dev-resources/shared-styles/product-page.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/global.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/header.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/footer.css">
+    <link rel="stylesheet" href="../../assets/shared-styles/product-page.css">
   </head>
   
   <body>
@@ -23,7 +23,7 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../dev-resources/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
       </a>
     </div>
     <nav class="nav">
@@ -36,7 +36,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
       </button>
     </div>
   </header>
@@ -47,7 +47,7 @@
     <main class="product-section">
       <div class="product-content-container">
         <div class="product-image">
-          <img src="../../dev-resources/images/products/mcr-003/mcr-003-full.webp" alt="Cryhard - Stretch Us Outta Here Cassette">
+          <img src="../../assets/images/products/mcr-003/mcr-003-full.webp" alt="Cryhard - Stretch Us Outta Here Cassette">
         </div>
         <div class="product-image-spacer"></div>
         <div class="product-details-container">
@@ -435,7 +435,7 @@
       <div class="related-merch-content">
         <!-- Rainbow Container Top -->
         <div class="rainbow-container-top">
-          <img src="../../dev-resources/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
+          <img src="../../assets/images/products/rainbow-container-top.png" alt="Rainbow Container Top">
         </div>
 
         <!-- Store Section -->
@@ -446,8 +446,8 @@
             <a href="../../store/mcr-002/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -465,8 +465,8 @@
             <a href="../mcr-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -483,8 +483,8 @@
             <a href="../new-001/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -501,8 +501,8 @@
             <a href="../new-005/" class="merch-link">
               <div class="merch-block">
                 <div class="merch-block-image-container">
-                  <img src="../../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                  <img src="../../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                  <img src="../../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                  <img src="../../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
                 </div>
                 <div class="merch-block-details-container">
                   <div class="merch-block-names-container">
@@ -521,7 +521,7 @@
 
         <!-- Rainbow Container Bottom -->
         <div class="rainbow-container-bottom">
-          <img src="../../dev-resources/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
+          <img src="../../assets/images/products/rainbow-container-bottom.png" alt="Rainbow Container Bottom">
         </div>
       </div>
     </section>
@@ -532,7 +532,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -547,32 +547,32 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
     <!-- Import Scripts -->
-    <script src="../../dev-resources/scripts/MobileHeaderExpand.js"></script>
-    <script src="../../dev-resources/scripts/ProductZoom.js"></script>
-    <script src="../../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
+    <script src="../../assets/scripts/MobileHeaderExpand.js"></script>
+    <script src="../../assets/scripts/ProductZoom.js"></script>
+    <script src="../../assets/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
