--- a/store/index.html
+++ b/store/index.html
@@ -7,14 +7,14 @@
     <title>Store - Mystery Class Records</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../dev-resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Fonts and Stylesheets -->
     <link rel="stylesheet" href="https://use.typekit.net/chq5wda.css"> <!-- Adobe Fonts Embed Code -->
-    <link rel="stylesheet" href="../dev-resources/shared-styles/global.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/header.css">
-    <link rel="stylesheet" href="../dev-resources/shared-styles/footer.css">
+    <link rel="stylesheet" href="../assets/shared-styles/global.css">
+    <link rel="stylesheet" href="../assets/shared-styles/header.css">
+    <link rel="stylesheet" href="../assets/shared-styles/footer.css">
     <link rel="stylesheet" href="store.css">
   </head>
 
@@ -23,7 +23,7 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../dev-resources/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Logo">
         </a>
       </div>
       <nav class="nav">
@@ -36,7 +36,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../dev-resources/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
         </button>
       </div>
     </header>
@@ -53,8 +53,8 @@
           <a href="mcr-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-001/mcr-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-001/mcr-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -71,8 +71,8 @@
           <a href="mcr-002/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-002/mcr-002.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-002/mcr-002-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -89,8 +89,8 @@
           <!-- <a href="mcr-002v/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-002v/mcr-002v.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-002v/mcr-002v.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-002v/mcr-002v.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -107,8 +107,8 @@
           <a href="mcr-003/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-003/mcr-003.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-003/mcr-003-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -125,8 +125,8 @@
           <a href="mcr-004/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-004/mcr-004.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-004/mcr-004-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -143,8 +143,8 @@
           <a href="mcr-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-005/mcr-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-005/mcr-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -161,8 +161,8 @@
           <a href="mcr-006/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/mcr-006/mcr-006.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/mcr-006/mcr-006-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -179,8 +179,8 @@
           <a href="new-001/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/new-001/new-001.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/new-001/new-001-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -197,8 +197,8 @@
           <a href="new-005/" class="merch-link">
             <div class="merch-block">
               <div class="merch-block-image-container">
-                <img src="../dev-resources/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
-                <img src="../dev-resources/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
+                <img src="../assets/images/products/new-005/new-005.webp" alt="Product Image" class="merch-block-product-image default-image">
+                <img src="../assets/images/products/new-005/new-005-hover.webp" alt="Product Hover Image" class="merch-block-product-image hover-image">
               </div>
               <div class="merch-block-details-container">
                 <div class="merch-block-names-container">
@@ -222,7 +222,7 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../dev-resources/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
@@ -237,32 +237,32 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../dev-resources/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
         </div>
         <div class="footer-social">
           <a href="https://www.facebook.com/profile.php?id=61571429339039" target="_blank">
-            <img src="../dev-resources/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
+            <img src="../assets/images/social-icons/facebook-icon.svg" alt="Facebook Icon">
           </a>
           <a href="https://www.instagram.com/mysteryclass/" target="_blank">
-            <img src="../dev-resources/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
+            <img src="../assets/images/social-icons/instagram-icon.svg" alt="Instagram Icon">
           </a>
           <a href="https://www.youtube.com/@mysteryclassrecords9824" target="_blank">
-            <img src="../dev-resources/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
+            <img src="../assets/images/social-icons/youtube-icon.svg" alt="YouTube Icon">
           </a>
           <a href="https://www.tiktok.com/@mysteryclassrecords" target="_blank">
-            <img src="../dev-resources/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
+            <img src="../assets/images/social-icons/tiktok-icon.svg" alt="TikTok Icon">
           </a>
         </div>
       </div>
     </footer>
 
       <!-- Scripts -->
-      <script src="../dev-resources/scripts/CartToggleSticky.js" async></script>
-      <script src="../dev-resources/scripts/MobileHeaderExpand.js"></script>
-      <script src="../dev-resources/scripts/MerchBlockScrollSwap.js"></script>
+      <script src="../assets/scripts/CartToggleSticky.js" async></script>
+      <script src="../assets/scripts/MobileHeaderExpand.js"></script>
+      <script src="../assets/scripts/MerchBlockScrollSwap.js"></script>
 
   </body>
 </html>
